syntax = "proto3";

option go_package = "/rpc"; 

package rpc;

service User {
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {} 
  rpc LogOutUser (LogoutUserRequest) returns (LogoutUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
}

message CreateUserRequest {
  string username=1;
  string password=2;
}
message CreateUserResponse {
  bool success = 1;
  string message = 2;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  bool success = 1;
  string message = 2;
  string session_token = 3;
}

message LogoutUserRequest {
  string session_token = 1;
}
message LogoutUserResponse {
  bool success = 1;
  string message = 2;
}
